--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- libraries -->
+    <script src="js/lib/matter.min.js"></script>
+    <script src="js/lib/hsluv-0.1.0.min.js"></script>
+    <script src="js/lib/p5.min.js"></script>
+    <script src="js/lib/p5.sound.min.js"></script>
 
     <!-- scripts -->
+    <script src="js/scripts/main.js"></script>
   </head>
   <body></body>
 </html>
