--- a/sex_toys/index.html
+++ b/sex_toys/index.html
@@ -14,8 +14,10 @@
     <script src="js/lib/p5.sound.min.js"></script>
 
     <!-- scripts -->
+
     <script src="js/scripts/Bum.js"></script>
     <script src="js/scripts/AnalBeads.js"></script>
+    <script src="js/scripts/RectangleParticle.js"></script>
     <script src="js/scripts/CircleParticle.js"></script>
     <script src="js/scripts/main.js"></script>
   </head>
