--- a/sex_toys/penis/index.html
+++ b/sex_toys/penis/index.html
@@ -18,8 +18,8 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
     <script src="js/lib/p5.sound.min.js"></script>
 
     <!-- scripts -->
-
-    <script src="js/scripts/Bum.js"></script>
+    <script src="js/scripts/Box.js"></script>
+    <!-- <script src="js/scripts/Bum.js"></script> -->
     <script src="js/scripts/AnalBeads.js"></script>
     <script src="js/scripts/RectangleParticle.js"></script>
     <script src="js/scripts/CircleParticle.js"></script>
