--- a/sex_toys/anal_beads/index.html
+++ b/sex_toys/anal_beads/index.html
@@ -3,23 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+
     <title>sex toys</title>
 
     <link rel="stylesheet" href="css/style.css" />
-
     <!-- libraries -->
+
+    <script
+      src="https://kit.fontawesome.com/f568a83d89.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/lib/matter.min.js"></script>
     <script src="js/lib/hsluv-0.1.0.min.js"></script>
     <script src="js/lib/p5.min.js"></script>
-    <script src="js/lib/p5.sound.min.js"></script>
+    <!-- <script src="js/lib/p5.sound.min.js"></script> -->
 
     <!-- scripts -->
-
+    <script src="js/scripts/Sound-mobile.js"></script>
     <script src="js/scripts/Bum.js"></script>
-    <script src="js/scripts/AnalBeads.js"></script>
+    <script src="js/scripts/AnalBeads-mobile.js"></script>
     <script src="js/scripts/RectangleParticle.js"></script>
-    <script src="js/scripts/CircleParticle.js"></script>
-    <script src="js/scripts/main.js"></script>
+    <script src="js/scripts/CircleParticle-mobile.js"></script>
+    <script src="js/scripts/Main-mobile.js"></script>
   </head>
   <body>
     <section id="p5js-canvas"></section>
