Changed colors, fonts, logo at the end and card button
Basically all stuff to make it more club sexu. Everything is beautiful now thanks to my friend. I think it is interesting to maybe think about the relationship of beauty to humour. Is it less funny because it looks really good?

--- a/sex_toys/anal_beads/index.html
+++ b/sex_toys/anal_beads/index.html
@@ -28,6 +28,16 @@
     <script src="js/scripts/Main-mobile.js"></script>
   </head>
   <body>
-    <section id="p5js-canvas"></section>
+    <section id="p5js-canvas">
+      <div id="end-message">
+        <p id="end-message-text">
+          Pour lire l'article complet, <br />rendez-vous sur le site de
+          <!-- <a href="https://clubsexu.com/">Club Sexu</a> -->
+        </p>
+        <a href="https://clubsexu.com/" target="_blank">
+          <img src="assets/images/club_logo.png" alt="" id="logo" />
+        </a>
+      </div>
+    </section>
   </body>
 </html>
