Sperm count emptying balls, card like the previous one

--- a/sex_toys/penis/index.html
+++ b/sex_toys/penis/index.html
@@ -48,18 +48,21 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
     <div id="canvases">
       <section id="p5js-canvas"></section>
       <section id="particles-canvas"></section>
+      <!-- <div id="infoCardDivOutline"></div> -->
+
       <div id="infoCardDiv">
         <div id="infoCard">
           <p id="textInfoCard">
-            Le lubrifiant est un allié sous-estimé du pénis. Il permet de
-            favoriser la glisse et réduire la friction, ce qui crée une
-            stimulation plus agréable et confortable.
+            Est-ce qu’un pénis peut être désensibilisé si on le stimule trop?
+            N’ayez crainte, les séances de masturbation récurrentes ne sont pas
+            problématiques pour la sensibilité du pénis.
           </p>
         </div>
+        <button id="continueButton">CONTINUER</button>
+
         <div id="cardNumber">
           <p id="cardNumberText">1</p>
         </div>
-        <button id="continueButton">CONTINUER</button>
       </div>
     </div>
   </body>
