--- a/sex_toys/boobs/index.html
+++ b/sex_toys/boobs/index.html
@@ -11,10 +11,12 @@
     <script src="js/lib/matter.min.js"></script>
     <script src="js/lib/hsluv-0.1.0.min.js"></script>
     <script src="js/lib/p5.min.js"></script>
-    <script src="js/lib/p5.sound.min.js"></script>
+    <!-- <script src="js/lib/p5.sound.min.js"></script> -->
 
     <!-- scripts -->
-
+    <script src="js/scripts/Blob.js"></script>
+    <script src="js/scripts/BlobNode.js"></script>
+    <script src="js/scripts/BezierPath.js"></script>
     <script src="js/scripts/Bum.js"></script>
     <script src="js/scripts/AnalBeads.js"></script>
     <script src="js/scripts/RectangleParticle.js"></script>
@@ -23,5 +25,19 @@
   </head>
   <body>
     <section id="p5js-canvas"></section>
+    <div id="infoCardDiv">
+      <div id="infoCard">
+        <p id="textInfoCard">
+          Est-ce qu’un pénis peut être désensibilisé si on le stimule trop?
+          N’ayez crainte, les séances de masturbation récurrentes ne sont pas
+          problématiques pour la sensibilité du pénis.
+        </p>
+      </div>
+      <button id="continueButton">CONTINUER</button>
+
+      <div id="cardNumber">
+        <p id="cardNumberText">1</p>
+      </div>
+    </div>
   </body>
 </html>
