added a restart function inactivity and loop in penis game

--- a/sex_toys/anal_beads/index.html
+++ b/sex_toys/anal_beads/index.html
@@ -30,12 +30,9 @@
   <body>
     <section id="p5js-canvas">
       <div id="end-message">
-        <p id="end-message-text">
-          Pour lire l'article complet, <br />rendez-vous sur le site de
-          <!-- <a href="https://clubsexu.com/">Club Sexu</a> -->
-        </p>
-        <a href="https://clubsexu.com/" target="_blank">
-          <img src="assets/images/club_logo.png" alt="" id="logo" />
+        <p id="end-message-text">To read the full article, click here</p>
+        <a href="https://clubsexu.com/en/" target="_blank">
+          <img src="assets/images/club_logo.png" id="logo" alt="" />
         </a>
       </div>
     </section>
