--- a/sex_toys/boobs/index.html
+++ b/sex_toys/boobs/index.html
@@ -27,11 +27,7 @@
     <section id="p5js-canvas"></section>
     <div id="infoCardDiv">
       <div id="infoCard">
-        <p id="textInfoCard">
-          Est-ce qu’un pénis peut être désensibilisé si on le stimule trop?
-          N’ayez crainte, les séances de masturbation récurrentes ne sont pas
-          problématiques pour la sensibilité du pénis.
-        </p>
+        <p id="textInfoCard"></p>
       </div>
       <button id="continueButton">CONTINUER</button>
 
