--- a/sex_toys/penis/index.html
+++ b/sex_toys/penis/index.html
@@ -52,11 +52,7 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
 
       <div id="infoCardDiv">
         <div id="infoCard">
-          <p id="textInfoCard">
-            Est-ce qu’un pénis peut être désensibilisé si on le stimule trop?
-            N’ayez crainte, les séances de masturbation récurrentes ne sont pas
-            problématiques pour la sensibilité du pénis.
-          </p>
+          <p id="textInfoCard"></p>
         </div>
         <button id="continueButton">CONTINUER</button>
 
@@ -64,6 +60,15 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
           <p id="cardNumberText">1</p>
         </div>
       </div>
+    </div>
+    <div id="end-message">
+      <p id="end-message-text">Touch to start</p>
+      <a href="https://clubsexu.com/en/" target="_blank">
+        <img src="club_logo.png" id="logo" alt="" />
+      </a>
+    </div>
+    <div id="nextGameContainer">
+      <p>next interface →</p>
     </div>
   </body>
 </html>
