looping and restarting and linking to next game boobs done

--- a/sex_toys/boobs/index.html
+++ b/sex_toys/boobs/index.html
@@ -35,5 +35,14 @@
         <p id="cardNumberText">1</p>
       </div>
     </div>
+    <div id="end-message">
+      <p id="end-message-text">Touch to start</p>
+      <a href="https://clubsexu.com/en/" target="_blank">
+        <img src="club_logo.png" id="logo" alt="" />
+      </a>
+    </div>
+    <div id="nextGameContainer">
+      <p>next interface →</p>
+    </div>
   </body>
 </html>
