sex toys all connected to each other with reload and all omg

--- a/sex_toys/anal_beads/index.html
+++ b/sex_toys/anal_beads/index.html
@@ -28,13 +28,15 @@
     <script src="js/scripts/Main-mobile.js"></script>
   </head>
   <body>
-    <section id="p5js-canvas">
-      <div id="end-message">
-        <p id="end-message-text">To read the full article, click here</p>
-        <a href="https://clubsexu.com/en/" target="_blank">
-          <img src="assets/images/club_logo.png" id="logo" alt="" />
-        </a>
-      </div>
-    </section>
+    <section id="p5js-canvas"></section>
+    <div id="end-message">
+      <p id="end-message-text">Pull to start</p>
+      <a href="https://clubsexu.com/en/" target="_blank">
+        <img src="club_logo.png" id="logo" alt="" />
+      </a>
+    </div>
+    <div id="nextGameContainer">
+      <p>next interface →</p>
+    </div>
   </body>
 </html>
