--- a/sex_toys/boobs/index.html
+++ b/sex_toys/boobs/index.html
@@ -29,14 +29,14 @@
       <div id="infoCard">
         <p id="textInfoCard"></p>
       </div>
-      <button id="continueButton">CONTINUER</button>
+      <button id="continueButton">CONTINUE</button>
 
       <div id="cardNumber">
         <p id="cardNumberText">1</p>
       </div>
     </div>
     <div id="end-message">
-      <p id="end-message-text">Touch to start</p>
+      <p id="end-message-text">Pull to start</p>
       <a href="https://clubsexu.com/en/" target="_blank">
         <img src="club_logo.png" id="logo" alt="" />
       </a>
