--- a/sex_toys/penis/index.html
+++ b/sex_toys/penis/index.html
@@ -54,7 +54,7 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
         <div id="infoCard">
           <p id="textInfoCard"></p>
         </div>
-        <button id="continueButton">CONTINUER</button>
+        <button id="continueButton">CONTINUE</button>
 
         <div id="cardNumber">
           <p id="cardNumberText">1</p>
