--- a/sex_toys/boobs/index.html
+++ b/sex_toys/boobs/index.html
@@ -24,25 +24,27 @@
     <script src="js/scripts/main.js"></script>
   </head>
   <body>
-    <section id="p5js-canvas"></section>
-    <div id="infoCardDiv">
-      <div id="infoCard">
-        <p id="textInfoCard"></p>
-      </div>
-      <button id="continueButton">CONTINUE</button>
+    <div id="flipWrapper">
+      <section id="p5js-canvas"></section>
+      <div id="infoCardDiv">
+        <div id="infoCard">
+          <p id="textInfoCard"></p>
+        </div>
+        <button id="continueButton">CONTINUE</button>
 
-      <div id="cardNumber">
-        <p id="cardNumberText">1</p>
+        <div id="cardNumber">
+          <p id="cardNumberText">1</p>
+        </div>
       </div>
-    </div>
-    <div id="end-message">
-      <p id="end-message-text">Pull to start</p>
-      <a href="https://clubsexu.com/en/" target="_blank">
-        <img src="club_logo.png" id="logo" alt="" />
-      </a>
-    </div>
-    <div id="nextGameContainer">
-      <p>next interface →</p>
+      <div id="end-message">
+        <p id="end-message-text">Pull to start</p>
+        <a href="https://clubsexu.com/en/" target="_blank">
+          <img src="club_logo.png" id="logo" alt="" />
+        </a>
+      </div>
+      <div id="nextGameContainer">
+        <p>next interface →</p>
+      </div>
     </div>
   </body>
 </html>
