Working on mobile mostly
Long live the penis!!!! Using shaders i made it work on mobile. still lagging a bit but we are getting there...

--- a/sex_toys/penis/index.html
+++ b/sex_toys/penis/index.html
@@ -26,7 +26,7 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
     <script src="js/scripts/main.js"></script>
   </head>
   <body>
-    <svg>
+    <!-- <svg>
       <defs>
         <filter id="gooey" height="130%">
           <feGaussianBlur
@@ -43,7 +43,7 @@ https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js
           <feBlend in="SourceGraphic" in2="goo"></feBlend>
         </filter>
       </defs>
-    </svg>
+    </svg> -->
     <!-- <h1>hello</h1> -->
     <div id="canvases">
       <section id="p5js-canvas"></section>
